some changes made

--- a/Sproduct.html
+++ b/Sproduct.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="right">
-            <div class="url">Home > Product > T-Shirt</div>
+            <div class="url">Home/Clothing/Women Clothing/Louis Philippe Jeans>More By Louis Philippe Jeans</div>
             <div class="pname">Louis Philippe Jeans</div>
             <div class="pname">Polo Collar Pure Cotton With Chest Pocket Slim Fit T-shirt</div>
             <div class="ratings">
@@ -54,14 +54,14 @@
                 <i class="fas fa-star-half-alt"></i>
             </div>
             <div class="price">
-                ₹884
+                <p class="cost">₹884</p> <del>MRP ₹1499</del><p class="off">(41% OFF)</p>
                 <div class="price-details">
                     <h2>Price Details</h2>
                     <ul>
                         <li>Maximum Retail Price: Rs. 1499 (Incl. of all taxes)</li>
                         <li>Discount: 41% OFF</li>
                         <li>Selling Price: Rs. 884 (Incl. of all taxes)</li>
-                        <li><del> MRP ₹1499 </del> (41% OFF) </li>
+                        
                     </ul>
                 </div>
                 <div class="material-care">
@@ -74,7 +74,7 @@
             </div>
             
             <div class="size">
-                <p>Size :</p>
+                <p>Select Size :</p>
                 <div class="psize active">M</div>
                 <div class="psize">L</div>
                 <div class="psize">XL</div>
@@ -88,7 +88,7 @@
                 <button class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </button>
-                <button class="buy-btn">
+                <button class="wish-btn">
                     <i class="fas fa-heart"></i> Wishlist
                 </button>
             </div>
