--- a/Sproduct.html
+++ b/Sproduct.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">Ecommerce</div>
+        <div class="logo">Myntra</div>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
