--- a/Sproduct.html
+++ b/Sproduct.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <!-- Navbar and other content... -->
-   
+
     <!-- Product content -->
     <div id="container">
         <div class="left">
@@ -28,6 +28,9 @@
             </div>
             <div class="inner">
                 <img src="images/item4.png" alt="Image 4">
+            </div>
+            <div class="inner">
+                <img src="images/item5.jpg" alt="Image 4">
             </div>
         </div>
         <div class="right">
@@ -85,6 +88,41 @@
                 </ul>
                 <p>View plans</p>
             </div>
+
+            <!-- Product Details Section -->
+            <div class="product-details">
+                <h2>PRODUCT DETAILS</h2>
+                <p>Violet woven design Kurta with Trousers with dupatta</p>
+
+                <h3>Kurta design:</h3>
+                <ul>
+                    <li>Floral woven design</li>
+                    <li>Straight shape</li>
+                    <li>Regular style</li>
+                    <li>Round neck, three-quarter regular sleeves</li>
+                    <li>2 pockets zari detail</li>
+                    <li>Calf length with straight hem</li>
+                    <li>Pure silk machine weave fabric</li>
+                </ul>
+
+                <h3>Trousers design:</h3>
+                <ul>
+                    <li>Solid Trousers</li>
+                    <li>Elasticated waistband</li>
+                    <li>Slip-on closure</li>
+                </ul>
+
+                <h3>Size & Fit</h3>
+                <p>The model (height 5'8) is wearing a size S</p>
+
+                <h3>Material & Care</h3>
+                <p>Silk</p>
+                <p>Dry clean</p>
+
+                <h3>Specifications</h3>
+                <p>Add specifications here</p>
+            </div>
+            <!-- End of Product Details Section -->
         </div>
     </div>
 
@@ -94,4 +132,5 @@
         // JavaScript code goes here...
     </script>
 </body>
-</html>
+
+</html
